--- a/detection.ipynb
+++ b/detection.ipynb
@@ -63,7 +63,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## **1. Importación de Librerías y Simulación de Datos**"
+        "## **1. Importación de Librerías y Carga de Datos**"
       ]
     },
     {
@@ -82,22 +82,249 @@
         "from sklearn.metrics import mean_squared_error, r2_score\n",
         "from sklearn.datasets import make_regression\n",
         "\n",
-        "# 1. SIMULACIÓN DE DATOS (dataset3.csv)\n",
-        "# Nota: En un escenario real, usaríamos pd.read_csv('dataset3.csv')\n",
-        "print(\"Generando datos simulados para imitar 'dataset3.csv'...\")\n",
-        "print(\"  - 3900 Clientes\")\n",
-        "print(\"  - 17 Variables descriptores\")\n",
-        "print(\"  - 1 Variable objetivo (Puntaje de Satisfacción)\")\n",
+        "df = pd.read_csv('dataset3.csv')\n",
+        "print(\"¡Archivo 'dataset3.csv' cargado exitosamente!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "COLUMNAS: ['Review Rating', 'Age', 'Gender', 'Item Purchased', 'Purchase Amount (USD)', 'Location', 'Size', 'Color', 'Season', 'Subscription Status', 'Payment Method', 'Shipping Type', 'Shipping Type.1', 'Discount Applied', 'Promo Code Used', 'Previous Purchases', 'Preferred Payment Method', 'Frequency of Purchases']\n",
+            "\n",
+            "PREVIEW DATOS:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Review Rating</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>Item Purchased</th>\n",
+              "      <th>Purchase Amount (USD)</th>\n",
+              "      <th>Location</th>\n",
+              "      <th>Size</th>\n",
+              "      <th>Color</th>\n",
+              "      <th>Season</th>\n",
+              "      <th>Subscription Status</th>\n",
+              "      <th>Payment Method</th>\n",
+              "      <th>Shipping Type</th>\n",
+              "      <th>Shipping Type.1</th>\n",
+              "      <th>Discount Applied</th>\n",
+              "      <th>Promo Code Used</th>\n",
+              "      <th>Previous Purchases</th>\n",
+              "      <th>Preferred Payment Method</th>\n",
+              "      <th>Frequency of Purchases</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.1</td>\n",
+              "      <td>55</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Blouse</td>\n",
+              "      <td>53</td>\n",
+              "      <td>Kentucky</td>\n",
+              "      <td>L</td>\n",
+              "      <td>Gray</td>\n",
+              "      <td>Winter</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Credit Card</td>\n",
+              "      <td>Express</td>\n",
+              "      <td>Express</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>14</td>\n",
+              "      <td>Venmo</td>\n",
+              "      <td>Fortnightly</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3.1</td>\n",
+              "      <td>19</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Sweater</td>\n",
+              "      <td>64</td>\n",
+              "      <td>Maine</td>\n",
+              "      <td>L</td>\n",
+              "      <td>Maroon</td>\n",
+              "      <td>Winter</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Bank Transfer</td>\n",
+              "      <td>Express</td>\n",
+              "      <td>Express</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Cash</td>\n",
+              "      <td>Fortnightly</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3.1</td>\n",
+              "      <td>50</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Jeans</td>\n",
+              "      <td>73</td>\n",
+              "      <td>Massachusetts</td>\n",
+              "      <td>S</td>\n",
+              "      <td>Maroon</td>\n",
+              "      <td>Spring</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Cash</td>\n",
+              "      <td>Free_Shipping</td>\n",
+              "      <td>Free_Shipping</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>23</td>\n",
+              "      <td>Credit Card</td>\n",
+              "      <td>Weekly</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3.5</td>\n",
+              "      <td>21</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Sandals</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Rhode Island</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Maroon</td>\n",
+              "      <td>Spring</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>PayPal</td>\n",
+              "      <td>Next_Day_Air</td>\n",
+              "      <td>Next_Day_Air</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>49</td>\n",
+              "      <td>PayPal</td>\n",
+              "      <td>Weekly</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2.7</td>\n",
+              "      <td>45</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Blouse</td>\n",
+              "      <td>49</td>\n",
+              "      <td>Oregon</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Turquoise</td>\n",
+              "      <td>Spring</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Cash</td>\n",
+              "      <td>Free_Shipping</td>\n",
+              "      <td>Free_Shipping</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>31</td>\n",
+              "      <td>PayPal</td>\n",
+              "      <td>Annually</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Review Rating  Age Gender Item Purchased  Purchase Amount (USD)  \\\n",
+              "0            3.1   55   Male         Blouse                     53   \n",
+              "1            3.1   19   Male        Sweater                     64   \n",
+              "2            3.1   50   Male          Jeans                     73   \n",
+              "3            3.5   21   Male        Sandals                     90   \n",
+              "4            2.7   45   Male         Blouse                     49   \n",
+              "\n",
+              "        Location Size      Color  Season Subscription Status Payment Method  \\\n",
+              "0       Kentucky    L       Gray  Winter                 Yes    Credit Card   \n",
+              "1          Maine    L     Maroon  Winter                 Yes  Bank Transfer   \n",
+              "2  Massachusetts    S     Maroon  Spring                 Yes           Cash   \n",
+              "3   Rhode Island    M     Maroon  Spring                 Yes         PayPal   \n",
+              "4         Oregon    M  Turquoise  Spring                 Yes           Cash   \n",
+              "\n",
+              "   Shipping Type Shipping Type.1 Discount Applied Promo Code Used  \\\n",
+              "0        Express         Express              Yes             Yes   \n",
+              "1        Express         Express              Yes             Yes   \n",
+              "2  Free_Shipping   Free_Shipping              Yes             Yes   \n",
+              "3   Next_Day_Air    Next_Day_Air              Yes             Yes   \n",
+              "4  Free_Shipping   Free_Shipping              Yes             Yes   \n",
+              "\n",
+              "   Previous Purchases Preferred Payment Method Frequency of Purchases  \n",
+              "0                  14                    Venmo            Fortnightly  \n",
+              "1                   2                     Cash            Fortnightly  \n",
+              "2                  23              Credit Card                 Weekly  \n",
+              "3                  49                   PayPal                 Weekly  \n",
+              "4                  31                   PayPal               Annually  "
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "print(\"COLUMNAS:\", df.columns.tolist()); print(\"\\nPREVIEW DATOS:\"); display(df.head())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
-        "X, y = make_regression(n_samples=3900, n_features=17, n_informative=10, \n",
-        "                       noise=20, random_state=42)\n",
         "\n",
-        "# Convertir a DataFrame para mejor manejo y visualización\n",
-        "feature_names = [f'Var_{i+1}' for i in range(17)]\n",
-        "df = pd.DataFrame(X, columns=feature_names)\n",
-        "df['Satisfaccion_Score'] = y\n",
+        "# 1. CARGA DE DATOS (dataset3.csv)\n",
+        "try:\n",
+        "    \n",
+        "    # PREPROCESAMIENTO AUTOMÁTICO\n",
+        "    # Asumimos que la última columna es el puntaje de satisfacción (target)\n",
+        "    # y las anteriores son los descriptores (features).\n",
+        "    # IMPORTANTE: Verifica si tu target tiene un nombre específico.\n",
+        "    X = df.iloc[:, :-1]  # Todas las columnas menos la última\n",
+        "    y = df.iloc[:, -1]   # La última columna (Target)\n",
+        "    feature_names = X.columns.tolist()\n",
+        "    \n",
+        "    # Si necesitas especificar la columna por nombre, descomenta y usa:\n",
+        "    # y = df['Nombre_Columna_Target']\n",
+        "    # X = df.drop('Nombre_Columna_Target', axis=1)\n",
         "\n",
-        "print(\"Primeras filas del dataset generado:\")\n",
+        "except FileNotFoundError:\n",
+        "    print(\"⚠️ AVISO: No se encontró 'dataset3.csv' en el directorio actual.\")\n",
+        "    print(\">> Generando datos sintéticos TEMPORALES para demostrar el funcionamiento del código.\")\n",
+        "    print(\">> Por favor, asegúrate de colocar 'dataset3.csv' en la misma carpeta que este notebook.\")\n",
+        "    \n",
+        "    X, y = make_regression(n_samples=3900, n_features=17, n_informative=10, \n",
+        "                           noise=20, random_state=42)\n",
+        "    feature_names = [f'Var_{i+1}' for i in range(17)]\n",
+        "    df = pd.DataFrame(X, columns=feature_names)\n",
+        "    df['Satisfaccion_Score'] = y\n",
+        "\n",
+        "print(f\"Dimensiones del dataset: {df.shape}\")\n",
+        "print(\"Primeras filas:\")\n",
         "display(df.head())"
       ]
     },
@@ -226,7 +453,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.11.9"
     }
   },
