--- a/detection.ipynb
+++ b/detection.ipynb
@@ -87,6 +87,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Este bloque es el punto de entrada. Importamos las librerías necesarias de sklearn y pandas. La lógica principal intenta leer dataset3.csv directamente del disco."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
@@ -295,37 +302,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "# 1. CARGA DE DATOS (dataset3.csv)\n",
-        "try:\n",
+        "try:   \n",
+        "# 2. DEFINICIÓN DE TARGET Y FEATURES\n",
+        "    target_col = 'Review Rating'\n",
         "    \n",
-        "    # PREPROCESAMIENTO AUTOMÁTICO\n",
-        "    # Asumimos que la última columna es el puntaje de satisfacción (target)\n",
-        "    # y las anteriores son los descriptores (features).\n",
-        "    # IMPORTANTE: Verifica si tu target tiene un nombre específico.\n",
-        "    X = df.iloc[:, :-1]  # Todas las columnas menos la última\n",
-        "    y = df.iloc[:, -1]   # La última columna (Target)\n",
-        "    feature_names = X.columns.tolist()\n",
+        "    # Separamos X (Variables) e y (Target)\n",
+        "    y = df[target_col]\n",
+        "    X_raw = df.drop(target_col, axis=1)\n",
+        "\n",
+        "    # 3. PREPROCESAMIENTO\n",
+        "    print(\"Convirtiendo variables de texto (categóricas) a numéricas...\")\n",
+        "    X = pd.get_dummies(X_raw, drop_first=True)\n",
         "    \n",
-        "    # Si necesitas especificar la columna por nombre, descomenta y usa:\n",
-        "    # y = df['Nombre_Columna_Target']\n",
-        "    # X = df.drop('Nombre_Columna_Target', axis=1)\n",
+        "    print(f\"Dimensiones después de transformar texto a números: {X.shape}\")\n",
+        "    print(\"Ejemplo de nuevas columnas generadas:\", list(X.columns[:5]))\n",
         "\n",
         "except FileNotFoundError:\n",
-        "    print(\"⚠️ AVISO: No se encontró 'dataset3.csv' en el directorio actual.\")\n",
-        "    print(\">> Generando datos sintéticos TEMPORALES para demostrar el funcionamiento del código.\")\n",
-        "    print(\">> Por favor, asegúrate de colocar 'dataset3.csv' en la misma carpeta que este notebook.\")\n",
-        "    \n",
-        "    X, y = make_regression(n_samples=3900, n_features=17, n_informative=10, \n",
-        "                           noise=20, random_state=42)\n",
-        "    feature_names = [f'Var_{i+1}' for i in range(17)]\n",
-        "    df = pd.DataFrame(X, columns=feature_names)\n",
-        "    df['Satisfaccion_Score'] = y\n",
-        "\n",
-        "print(f\"Dimensiones del dataset: {df.shape}\")\n",
-        "print(\"Primeras filas:\")\n",
-        "display(df.head())"
+        "    print(\"ERROR: No se encuentra 'dataset3.csv'. Asegúrate de subirlo o ponerlo en la carpeta.\")"
       ]
     },
     {
@@ -333,8 +326,15 @@
       "metadata": {},
       "source": [
         "\n",
-        "En este primer paso, importamos las herramientas necesarias (sklearn, pandas) y generamos un dataset sintético que imita las características del dataset3.csv lo cual fué mencionado en el problema (3900 filas, 17 variables). Esto nos permite establecer la base de datos sobre la que se trabaja durante el proyecto. Usamos make_regression para crear una relación matemática subyacente con algo de ruido, simulando la variabilidad real de los datos de clientes."
+        "Se separa automáticamente las variables independientes ($X$) de la variable objetivo ($y$), asumiendo que el objetivo está en la última columna."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -351,8 +351,8 @@
       "source": [
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    df[feature_names], \n",
-        "    df['Satisfaccion_Score'], \n",
+        "    X, \n",
+        "    y, \n",
         "    test_size=0.2,  # 20% para test\n",
         "    random_state=42\n",
         ")\n",
@@ -372,16 +372,64 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## **3. Definición de Función de Evaluación**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def evaluar_modelo(nombre, modelo, params_desc):\n",
+        "    \"\"\"\n",
+        "    Entrena el modelo proporcionado y evalúa su desempeño tanto en \n",
+        "    el set de entrenamiento como en el de prueba.\n",
+        "    \"\"\"\n",
+        "    # Entrenamiento\n",
+        "    modelo.fit(X_train, y_train)\n",
+        "    \n",
+        "    # Predicciones\n",
+        "    y_train_pred = modelo.predict(X_train)\n",
+        "    y_test_pred = modelo.predict(X_test)\n",
+        "    \n",
+        "    # Cálculo de métricas\n",
+        "    # MSE (Error Cuadrático Medio) - Mide el error promedio al cuadrado\n",
+        "    mse_test = mean_squared_error(y_test, y_test_pred)\n",
+        "    \n",
+        "    # R2 Score - Mide qué tan bien se ajusta el modelo (1.0 es perfecto)\n",
+        "    r2_train = r2_score(y_train, y_train_pred)\n",
+        "    r2_test = r2_score(y_test, y_test_pred)\n",
+        "    \n",
+        "    # Guardar métricas en la lista de resultados\n",
+        "    resultados.append({\n",
+        "        'Algoritmo': nombre,\n",
+        "        'Parametros': params_desc,\n",
+        "        'MSE Test': mse_test,\n",
+        "        'R2 Train': r2_train,\n",
+        "        'R2 Test': r2_test,\n",
+        "        'Generalizacion (Gap)': abs(r2_train - r2_test) \n",
+        "    })\n",
+        "    \n",
+        "    print(f\"Modelo: {nombre} ({params_desc})\")\n",
+        "    print(f\"   -> R2 Train: {r2_train:.4f} | R2 Test: {r2_test:.4f}\")\n",
+        "    print(f\"   -> Gap Generalización: {abs(r2_train - r2_test):.4f}\")\n",
+        "    print(\"-\" * 30)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Definimos una función estándar para evitar repetir código. Esta función toma cualquier modelo (KNN, Árbol, SVR), lo entrena con tus datos y calcula métricas clave:\n",
+        "\n",
+        "$R^2$ (Coeficiente de determinación): Nos dice el porcentaje de variabilidad de la satisfacción que el modelo puede explicar.\n",
+        "\n",
+        "Gap de Generalización: La diferencia entre el rendimiento en entrenamiento y prueba. Si es muy grande, hay overfitting."
+      ]
     },
     {
       "cell_type": "code",
