--- a/detection.ipynb
+++ b/detection.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "executionInfo": {
@@ -92,13 +92,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.datasets import make_regression\n",
-    "import category_encoders as ce"
+    "import category_encoders as ce\n",
+    "from pyearth import Earth"
    ]
   },
   {
@@ -4168,6 +4169,53 @@
    },
    "source": [
     "Aquí dividimos los datos en dos conjuntos: Entrenamiento (80%) y Prueba (20%). Esta separación es muy importante para asegurarse de que el sistema generalize bien. Si evaluáramos el modelo con los mismos datos que usamos para entrenarlo, obtendríamos resultados engañosos ya que solo mira los datos que ya conoce (overfitting). Los datos de prueba actúan como clientes \"nuevos\" que el sistema nunca ha visto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 😁 Entrenamiento MARS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definir el modelo base\n",
+    "# enable_pruning=True para podar funciones que no aportan\n",
+    "mars_model = Earth(enable_pruning=True)\n",
+    "\n",
+    "# --- Definir parámetros que se probarán ---\n",
+    "param_grid_mars = {\n",
+    "    'max_degree': [1, 2],           \n",
+    "    'max_terms': [10, 20, 30],      \n",
+    "    'penalty': [3.0]                \n",
+    "}\n",
+    "\n",
+    "# Configurar la validación cruzada (Cross-Validation)\n",
+    "grid_mars = GridSearchCV(\n",
+    "    estimator=mars_model,\n",
+    "    param_grid=param_grid_mars,\n",
+    "    cv=5,\n",
+    "    scoring='neg_mean_squared_error',\n",
+    "    n_jobs=-1, \n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# --- Entrenamiento ---\n",
+    "print(\"Iniciando búsqueda de hiperparámetros para MARS...\")\n",
+    "grid_mars.fit(X_train_mars, y_train)\n",
+    "\n",
+    "# --- Resultados ---\n",
+    "print(\"\\nEntrenamiento finalizado.\")\n",
+    "print(f\"Mejores parámetros encontrados: {grid_mars.best_params_}\")\n",
+    "print(f\"Mejor Score (MSE negativo promedio): {grid_mars.best_score_:.4f}\")\n",
+    "\n",
+    "# Guardar el mejor modelo para usarlo después\n",
+    "best_mars_model = grid_mars.best_estimator_"
    ]
   },
   {
